--- a/riddles.html
+++ b/riddles.html
@@ -54,7 +54,7 @@
                 <br><input type="text" id="answer4" name="answer4" placeholder="WRITE ANSWER">
             </div>
             <div class="question">
-                <label for="answer5" class="riddles-paragraph-game">5. I am the person who endured the crime, in the book, Diana & Damian Cawper. <span id="span" class="hide">(VICTIM)</span></label>
+                <label for="answer5" class="riddles-paragraph-game">5. I am the person who endured the crime, in the book, Diana & Damian Cowper. <span id="span" class="hide">(VICTIM)</span></label>
                 <br><input type="text" id="answer5" name="answer5" placeholder="WRITE ANSWER">
             </div>
             <div class="question">
