--- a/songs.html
+++ b/songs.html
@@ -7,11 +7,13 @@
     <title>The Word Is Murder</title>
     <script src="popup.js"></script>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style2.css">
     <link rel="icon" href="assets/murder.png" type="image/png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 
+
 </head>
-<body> 
+<body class="songsb"> 
 <div class="pcontainer">
         <!-- NAVIGATION START -->
     <section class="hero">
@@ -32,6 +34,76 @@
     </section>
 
         <!-- NAVGIATION END -->
+
+        <div class="pall" id="song1">
+            <div class="songs" id="num1s">
+                <p class="songsp">"Smooth Criminal" by Micheal Jackson</p>
+                <div class="audio">
+                    <audio
+                    controls
+                    src="https://ia600307.us.archive.org/31/items/SmoothCriminal/SmoothCriminal.mp3" class="" preload="metadata">
+                        <a href="https://ia600307.us.archive.org/31/items/SmoothCriminal/SmoothCriminal.mp3">
+                            Download audio
+                     </a>
+             </audio>
+            </div>
+        </div>
+            <div class="lyrp">
+                <div class="spara" id="para1">
+                    <p class="songsp">
+                        "Smooth Criminal" by Michael Jackson shares thematic elements that align with the essence of the story of The Word Is Murder. The song as well as the novel revolves around a similar topic: murder. In the first verse, the lyrics describe the various acts that the individual does before committing his crime, moving seamlessly through the darkness, and having no regret of his actions. This mirrors the nature of the murderer, Robert Cornwallis, in The Word is Murder, who seems to always be a step ahead, evading the grasp of justice. For example, when everyone was confused about the mysterious song playing at the funeral of Diana Cowper, he was already waiting for his second victim at their house.  Both the song and the novel capture the skills of a smooth and mysterious criminal through his acts. Moreover, the dynamic instrumentation and rhythms create an intense and suspenseful atmosphere in the song, paralleling the tension and mystery present throughout the novel. The multiples interrogations of Hawthorne and crimes in the book reflects its suspense similar to the song’s lyrics. Furthermore, the repetition of the sentence “Annie are you okay?” hints the obsession of the narrator over the victim, Annie. In the novel, Robert Cornwallis develops an unhealthy fixation over Damian Cowper and his mother Diana which drives his unregretful actions and choices. His motive was only for the sake of vengeance that progressed throughout the years. In conclusion, both the song “Smooth Criminal” and the novel The Word Is Murder echoes similar story and thematic such as mystery, investigation, and obsession.
+                    </p>
+                </div>
+                    <div id='rg_embed_link_69620' class='rg_embed_link lyrics' data-song-id='69620'>Read <a href='https://genius.com/Michael-jackson-smooth-criminal-lyrics'>“Smooth Criminal” by Michael Jackson</a> on Genius</div> <script crossorigin src='//genius.com/songs/69620/embed.js'></script>
+            </div>
+        </div>
+
+        <div class="pall" id="song2">
+            <div class="songs" id="num2s">
+                <p class="songsp">"No More Mr.Nice Guy" by Aline Cooper</p>
+                <div class="audio">
+                    <audio
+                    controls
+                    src="https://ia600307.us.archive.org/31/items/SmoothCriminal/SmoothCriminal.mp3" class="" preload="metadata">
+                        <a href="https://ia600307.us.archive.org/31/items/SmoothCriminal/SmoothCriminal.mp3">
+                            Download audio
+                     </a>
+             </audio>
+            </div>
+        </div>
+            <div class="lyrp">
+                <div class="spara" id="para2">
+                    <p class="songsp">
+                     Moving on from the first music, “No More Mr. Nice Guy” by Aline Cooper is another song that relates to the novel read, The Word Is Murder. The main purpose of this music may not directly relate to the thematic of murder, however both share the idea of vengeance. In the novel, Robert Cornwallis, the murderer, harbors a deep motive that drives his actions, manipulating and lying to people in the purpose to achieve his crime. Moreover, he explains his intentions as the result of years’ worth of bullying and pressure expressed by his parents as well as his friends. Similarly, the song revolves around the life of an induvial having commonalities with Robert Cornwallis. Neither characters do not have many friends nor have self-esteem and hide their emotions around others. Furthermore, the multiple crimes Robert Cornwallis committed are acts of vengeance, expressing his anger towards his old friends who betrayed him. Parallelly, the individual presented in the song of Aline Cooper conveys his rage with the sentences “No more Mr. Nice guy” as well as “And I’m feeling mean”. Both the song and The Word Is Murder demonstrate that the various acts some individuals commit are the result of bullying and pressure, and a sense of vengeance. Additionally, they both seek a form of justice on their own terms and empowerment by manipulating their victims and events. In conclusion, While the specific circumstances and story may differ between the song “No More Mr. Nice Guy” and the novel The Word Is Murder, they both explore the theme of vengeance and its impact on individuals.
+                 </p>
+                </div>  
+                <div id='rg_embed_link_260325' class='rg_embed_link lyrics' data-song-id='260325'>Read <a href='https://genius.com/Alice-cooper-no-more-mr-nice-guy-lyrics'>“No More Mr. Nice Guy” by Alice Cooper</a> on Genius</div> <script crossorigin src='//genius.com/songs/260325/embed.js'></script>
+            </div>
+        </div>
+        <div class="pall" id="song3">
+            <div class="songs" id="num3s">
+                <p class="songsp">"Private Eyes" by Hall & Oates</p>
+                <div class="audio">
+                    <audio
+                    controls
+                    src="https://ia600307.us.archive.org/31/items/SmoothCriminal/SmoothCriminal.mp3" class="" preload="metadata">
+                        <a href="https://ia600307.us.archive.org/31/items/SmoothCriminal/SmoothCriminal.mp3">
+                            Download audio
+                     </a>
+             </audio>
+            </div>
+        </div>
+            <div class="lyrp">
+                <div class="spara" id="para3">
+                    <p class="songsp">
+                        Finally, for the third and last music, I found “Private Eyes” by Hall & Oates to be the perfect song to relate to the novel that I read, The Word Is Murder. It is not by its catchy and upbeat sound that it relates to the book, but by its lyrics which align with the nature of detective work and investigation as well as the interrogator Hawthorne. In the story, we learn that Hawthorne is portrayed as a very observant and intelligent detective despite his negative personality. He possesses a sharp eye for detail and can notice things that others might overlook. For example, when he and Anthony Horowitz first met, Hawthorne instantly notices that Horowitz was out of the country and got a new puppy just by looking at the sand on his clothes and his chewed shoelaces. This ability is reminiscent of the lyrics in the song that say: “Private eyes, they’re watching you, they see every move.” Both the music and the novel describe the observation skills of everyone. Moreover, in the song, the lyrics describe the private eyes as something that cannot be easily manipulated or deceived. Similarly, Hawthorne is an individual sharing these same characteristics, he is portrayed as a detective who is not fooled easily by lies. When he interrogates Alan Godwin and Mary about the events of the two kids, he is not deceived by the multiple lies they told him. He possesses a discerning nature and has an ability to see through the lies, making him an effective interrogator. In the lyrics of the song, the sentences “You can twist it around, baby, that ain’t enough” as well as “Don’t lie when you’re hurting inside, ‘cause you can’t escape my, private eyes” are a good comparison to the character of Hawthorne. Overall, both “Private Eyes” and the novel The Word Is Murder share similarities through their themes and stories they tell. 
+                    </p>
+                </div>
+                <div id='rg_embed_link_674520' class='rg_embed_link lyrics' data-song-id='674520'>Read <a href='https://genius.com/Hall-and-oates-private-eyes-lyrics'>“Private Eyes” by Hall & Oates</a> on Genius</div> <script crossorigin src='//genius.com/songs/674520/embed.js'></script>
+            </div>
+
+        </div>
+
     <!-- FOOTER -->
     
 <footer class="footer">
@@ -54,7 +126,7 @@
       <div class="popup-text">
         <h2>Discovering new songs!</h2>
         <p>You just entered the song page, here are some songs with lyrics that matches the vibe of the book.</p>
-        <p>"Choose 3 songs and explain....".</p>
+        <p>"Find three songs that relate to your novel. Provide the lyrics and then write an explanation of how each song relates to your novel."</p>
         <button class="popup-close-btn">Got it!</button>
       </div>
     </div>
