--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" href="style/testing.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
     <link rel="icon" href="assets/murder.png" type="image/png">
-    <script src="popup.js"></script>
-
+/
 </head>
 <body>
-<div class="pcontainer">
+<div class="">
  <!-- NAVIGATION START-->
     <section class="hero">  
     <nav 
@@ -85,7 +84,7 @@
     </div>
 </footer>
 </div>
-<div class="popup-container">
+<!-- <div class="popup-container">
     <div class="popup-content">
       <div class="popup-text">
         <h2>WELCOME!</h2>
@@ -95,7 +94,7 @@
         <button class="popup-close-btn">Got it!</button>
       </div>
     </div>
-  </div>
+  </div> -->
 </body>
 
 </html>
