--- a/riddles.html
+++ b/riddles.html
@@ -108,7 +108,7 @@
     <div class="popup-content">
       <div class="popup-text">
         <h2>Solve the Mystery with these riddles!</h2>
-        <p>You just entered the riddle page, here are some riddles to test your solving skills.</p>
+        <p>Prepare to put your solving skills to the test with a selection of mind-bending riddles.".</p>
         <p>"Write ten riddles for words found in your novel. Make sure to include an answer key".</p>
         <button class="popup-close-btn">Got it!</button>
       </div>
