--- a/songs.html
+++ b/songs.html
@@ -64,8 +64,8 @@
                 <div class="audio">
                     <audio
                     controls
-                    src="https://ia600307.us.archive.org/31/items/SmoothCriminal/SmoothCriminal.mp3" class="" preload="metadata">
-                        <a href="https://ia600307.us.archive.org/31/items/SmoothCriminal/SmoothCriminal.mp3">
+                    src="https://ia802905.us.archive.org/3/items/no-more-mr.-nice-guy/Alice%20Cooper%20-%20No%20More%20Mr.%20Nice%20Guy.mp3" class="" preload="metadata">
+                        <a href="https://ia802905.us.archive.org/3/items/no-more-mr.-nice-guy/Alice%20Cooper%20-%20No%20More%20Mr.%20Nice%20Guy.mp3">
                             Download audio
                      </a>
              </audio>
@@ -86,8 +86,8 @@
                 <div class="audio">
                     <audio
                     controls
-                    src="https://ia600307.us.archive.org/31/items/SmoothCriminal/SmoothCriminal.mp3" class="" preload="metadata">
-                        <a href="https://ia600307.us.archive.org/31/items/SmoothCriminal/SmoothCriminal.mp3">
+                    src="https://ia802309.us.archive.org/17/items/yyyy.daryl.hall..john.oates.private.eyes.mp3.yyyy/Daryl%20Hall%20%26%20John%20Oates%20-%20Private%20Eyes%20%281981%29%20MP3%20CBR%20320/01.%20Daryl%20Hall%20%26%20John%20Oates%20-%20Private%20Eyes.mp3" class="" preload="metadata">
+                        <a href="https://ia802309.us.archive.org/17/items/yyyy.daryl.hall..john.oates.private.eyes.mp3.yyyy/Daryl%20Hall%20%26%20John%20Oates%20-%20Private%20Eyes%20%281981%29%20MP3%20CBR%20320/01.%20Daryl%20Hall%20%26%20John%20Oates%20-%20Private%20Eyes.mp3">
                             Download audio
                      </a>
              </audio>
