--- a/cover.html
+++ b/cover.html
@@ -37,7 +37,7 @@
         <!-- COVER START -->
         <div class="cintro">
             <h1>Unveil the new <span class="underlined underline-clip">design</span> of the book cover</h1>
-            <h3 id="ch3"> "Design a new cover for the book and explain your choices in a paragraph".</h3>
+            <h3 id="ch3"> "Design a new cover for the book and explain your choices in a paragraph."</h3>
         </div>
         <div class="cimg">
             <div class="cimg-t">
@@ -48,7 +48,7 @@
         <div class="cexplain">
         
             <p class="cpa"> <strong>Explanation text</strong> </p>
-            <p class="cpa1">In this intriguing redesign of the cover for “The Word Is Murder”, every element has been chosen to arouse curiosity and suspense, and to captivate the reader’s attention into the fiction of the book. Each color has been chosen wisely: the gray-black background establishes a sense of mystery and curiosity, the blood red reminds the reader of the murder committed, the death of Diana Cowper, as the gold-beige color adds elements of warmth and attachment to some characters. Moreover, typography plays a vital role in conveying the book's tone and themes. The title “The Word Is Murder” presented has an aggressive quality and communicates the dark nature of the book. However, the author’s name creates a contrast with its classical display between the literary elegance and horrific murder.  Furthermore, the magnifying glass, a symbol of investigation and detective work, generates a sense of intrigue in readers. Such an element captures the feel of a murder mystery.  The polaroid image engages the reader’s curiosity as it is an essential element to the solving of the case, showing young actors Dan & Damian and adding a layer of intrigue. Fingerprints are a key element to a modern murder investigation and hint at the evidence that Anthony and Hawthorne will find throughout the story.</p>
+            <p class="cpa1">In this intriguing redesign of the cover for <span class="oblique">The Word Is Murder</span>, every element has been chosen to arouse curiosity and suspense, and to captivate the reader’s attention into the fiction of the book. Each color has been chosen wisely: the gray-black background establishes a sense of mystery and curiosity, the blood red reminds the reader of the murder committed, the death of Diana Cowper, as the gold-beige color adds elements of warmth and attachment to some characters. Moreover, typography plays a vital role in conveying the book's tone and themes. The title <span class="oblique">The Word Is Murder</span> presented has an aggressive quality and communicates the dark nature of the book. However, the typography of the author’s name creates a contrast with its classical display between the literary elegance and horrific murder.  Furthermore, the magnifying glass, a symbol of investigation and detective work, generates a sense of intrigue in readers. Such an element captures the feel of a murder mystery.  The polaroid image engages the reader’s curiosity as it is an essential element to the solving of the case, showing young actors Dan & Damian and adding a layer of intrigue. Fingerprints are a key element to a modern murder investigation and hint at the evidence that Anthony and Hawthorne will find throughout the story.</p>
 
         </div>
 
@@ -76,7 +76,7 @@
         <div class="popup-content">
         <div class="popup-text">
             <h2>What about a new cover page?</h2>
-            <p>You just entered the extension page, here is a new cover design for the book.</p>
+            <p>This is the extension's page, here is a new cover design for the book.</p>
             <p>"Design a new cover for your novel. Write a text explaining your choices for the new cover".</p>
             <button class="popup-close-btn">Got it!</button>
         </div>
