--- a/diary.html
+++ b/diary.html
@@ -48,50 +48,49 @@
   <div class="overlay">
         <div class="left-div text" id="div1">
             <p>June 11th, 2011 <br>
-              Dear Diary,<br>
-              I think it is the start of a new novel, but is it a great idea?<br>
-              It was a normal day, doing my routine, scheduling the work I must do this week, and even emailing the new novel I worked more than eight months’ on. I also celebrated this event with my wife last night. How exciting! However, this morning took a dark turn, as I received a call from a number I didn’t recognize. My first thought was: is it Steven Spielberg? I was completely wrong. A man with a deep voice said my name as soon as I answered the phone then introduced himself almost immediately after I replied.  It was Daniel Hawthorne, a detective, he wanted me to work with him on a new murder mystery novel. He gave me further details, it is the case of Diana Cowper, the mother of the famous Damian Cowper, how heartbreaking. She was killed last night in her house, and almost nothing was stolen. Hawthorne kept insisting and trying to convince me to write a novel about him and the murder. I was finally tempted to try a new theme to write on, murder mystery, and we even decided to split the revenue in half. <br>
-              So, I ask my question again: am I going to regret my quick decision? <br>
+              Dear Diary, <br>
+              I think it is the start of a new novel, but is it a great idea? <br>
+              It was a typical day, doing my routine, scheduling the work I must do this week, and even emailing the new novel I had worked more than eight months on. I even celebrated this event with my wife last night. How exciting! However, this morning took a dark turn as I received a call from a number I didn’t recognize. My first thought was: is it Steven Spielberg? I was utterly wrong. A man with a deep voice said my name as soon as I answered the phone, then introduced himself almost immediately after I replied. It was Daniel Hawthorne, a detective; he wanted me to work with him on a new murder mystery novel. He gave me further details; it is the case of Diana Cowper, the mother of the famous Damian Cowper. How heartbreaking. She was killed last night in her house, and almost nothing was stolen. Hawthorne kept insisting and trying to convince me to write a novel about him and the murder. I was finally tempted to try a new theme to write on, murder mystery, and we even decided to split the revenue in half. <br>
+              So, I ask my question again: will I regret my quick decision? <br>
               Horowitz
               </p>
           </div>
-          <div class="right-div text2" id="div2">
+          <div class="right-div text" id="div2">
             <p>June 19th, 2011 <br>
               Dear Diary, <br>
               I think I just lost my only chance to work with Spielberg. <br>
-              I was very excited for this day. I have been waiting weeks and counting hours for the phone call from Steven Spielberg office. I had the opportunity to discuss the first draft of the Tintin script with both him and Peter Jackson. I also knew the place of the meeting very well; it was a hotel. How lucky! Everything was going as planned, I got into my script and was happier than ever. It didn’t last very long. Steven Spielberg changed his mind, he changed the books of the film, he changed the whole ambience of the room; no more Tintin, it was now The Seven Crystal Balls. As I thought it could not get any worse, Hawthorne walked into the room, waiting for me to attend the funeral. He found me and interrupted the most important meeting I had. How selfish can he be! Hawthorne then convinced both Spielberg and Jackson to make me attend the funeral of Diana Cawper. <br>
-              I’m starting to regret my decision to work with Hawthorne. <br>
+              I was very excited about this day. I have been waiting for weeks and counting hours for the phone call from Steven Spielberg's office. I had the opportunity to discuss the <span class="oblique">Tintin</span> script's first draft with him and Peter Jackson. I also knew the place of the meeting very well; it was a hotel. How lucky! Everything was going as planned; I got into my script and was happier than ever. However, it lasted only a short time. Steven Spielberg changed his mind, he changed the books of the film, he changed the whole ambiance of the room; no more <span class="oblique">Tintin</span>, it was now <span class="oblique">The Seven Crystal Balls</span> . As I thought it could not get any worse, Hawthorne walked into the room, waiting for me to attend the funeral. He found me and interrupted the most important meeting I had. How selfish he is! Hawthorne then convinced Spielberg and Jackson to make me attend the funeral of Diana Cawper. <br>
+              I'm starting to regret my decision to work with Hawthorne. <br>
               Horowitz
               </p>
           </div>
           <div class="left-div text" id="div3">
             <p>June 20th, 2011 <br>
               Dear Diary, <br>
-              A weird song played at the funeral, minutes later, Damian Cowper was found dead. <br>
-              Today has been a whirlwind of events that has left me both intrigued and unnerved. After I was forced to leave the conference with Steven Spielberg by Daniel Horowitz, I had to attend the funeral of Diana Cowper as he had this gut feeling a major event would occur. He was not wrong. Everything went as planned, the guests came to pay their respects to Cowper’s family, the ceremony started and lastly, they started to bury Diana Cowper’s coffin. However, as they were slowly lowering the coffin, this very strange song started to play inside it. The lyrics are still stuck in my head, how infuriating! The wheels on the bus go round and round… When will it stop? I hadn’t had time to process what happened, that I was dragged by Hawthorne to go to Damian’s house. Unfortunately, we arrived too late. I had to witness a horrifying scene: Damian lying face down on the floor and covered in blood. I was very tired and confused about everything that happened that I can't remember the end of the day. <br>
+              A weird song played at the funeral; minutes later, Damian Cowper was found dead. <br>
+              Today has been a whirlwind of events that has left me both intrigued and unnerved. After I was forced to leave the conference with Steven Spielberg by Daniel Horowitz, I had to attend the funeral of Diana Cowper as he had this gut feeling a major event would occur. He was not wrong. Everything went as planned: the guests came to pay their respects to Cowper's family, the ceremony started, and they started burying Diana Cowper's coffin. However, as they slowly lowered the coffin, this bizarre song started to play inside it. The lyrics are still stuck in my head. How infuriating! "The wheels on the bus go round and round…" When will it stop? I hadn't had time to process what happened, that I was dragged by Hawthorne to go to Damian's house. Unfortunately, we arrived too late. I had to witness a horrifying scene: Damian lying face down on the floor and covered in blood. I was exhausted and confused about everything that happened and could not remember the end of the day. <br>
               When will it end? I need to find the murderer. <br>
               Horowitz
               </p>
           </div>
-          <div class="right-div text2" id="div4">
+          <div class="right-div text" id="div4">
             <p>June 23rd, 2011 <br>
               Dear Diary, <br>
               I might have just discovered a mind-blowing story. <br>
-              Hawthorne and I were interrogating Alan Godwin and Mary O’Brien about the car accident that happened years ago. Hawthorne did not give me any details on why this interrogation is necessary, but I was just doing my job and taking notes. At first, they were not happy about the situation Hawthorne put them in; however, they quickly cooperated. Subsequently, everything fell into place, and the story of the two little boys was unfolded.  Hawthorne made Alan confess his affair with Mary. Later, he admitted he saw the car accident and did not help his children. How can someone be so apathetic? Jeremy and Timothy could’ve been saved if Alan had come to help. <br>
+              Hawthorne and I were interrogating Alan Godwin and Mary O’Brien about the car accident that happened years ago. Hawthorne did not give me any details on why this interrogation was necessary, but I was just doing my job and taking notes. At first, they were unhappy about the situation Hawthorne put them in; however, they quickly cooperated. Subsequently, everything fell into place, and the story of the two little boys was unfolded. Hawthorne made Alan confess his affair with Mary. Later, he admitted he saw the car accident and did not help his children. How can someone be so apathetic? Jeremy and Timothy could’ve been saved if Alan had come to help. <br>
               I was shocked all along. <br>
               Horowitz 
               </p>
           </div>
           <div class="left-div text" id="div5">
-            <p>June 30th, 2011 <br>
+            <p>June 30th, 2011, <br>
               Dear Diary, <br>
-              I think I had a near death experience. I am somehow alive. <br>
-              In order to give you a better understanding, I met Liz in a new café to ask some questions about her experience of acting. She knew Damian very well and started giving me the necessary information as soon as we sat down and described him as a very strange and emotional person. How shocking! She then brought a framed photograph from 1999 of four young actors. I almost instantly recognized Robert Cornwallis, the funeral director, as he hadn’t changed at all. I knew I could find the murderer with this information. I quickly ran to his office to confront him about the picture I discovered. I was alone at that time; Hawthorne had left London at the moment. However, as soon as I brought back his experience in acting, he changed his mood and tuned livid. The coffee he offered me paralyzed my legs, making me unable to stand up. Cornwallis, with a horrible smile, forcefully transferred me to a wheelchair and pushed me on an industrial lift. I was mortified. He confessed about both murders.  <br>
-              
+              I think I had a near-death experience. I am somehow alive. <br>
+              In order to give you a better understanding, I met Liz in a new café to ask some questions about her acting experience. She knew Damian very well and started giving me the necessary information as soon as we sat down and described him as a very strange and emotional person. How shocking! She then brought a framed photograph from 1999 of four young actors. I almost instantly recognized Robert Cornwallis, the funeral director, as he hadn’t changed at all. I knew I could find the murderer with this information. I quickly ran to his office to confront him about the picture I discovered. I was alone at that time; Hawthorne had left London at the moment. However, as soon as I brought back his experience in acting, he changed his mood and turned livid. The coffee he offered me paralyzed my legs, making me unable to stand up. With a horrible smile, Cornwallis forcefully transferred me to a wheelchair and pushed me on an industrial lift. I was mortified. He confessed about both murders.
               </p>
           </div>
-          <div class="right-div text2" id="div6">
-            <p>My sole thought was that I could be his next victim. Nonetheless, Hawthorne burst open a door, screaming at Cornwallis to stop. However, Robert instantly lifted the weapon to his throat, and drew it across in a single slash. It was over. <br>
+          <div class="right-div text" id="div6">
+            <p>My only thought was that I could be his next victim. Nonetheless, Hawthorne burst open a door, screaming at Cornwallis to stop. However, Robert instantly lifted the weapon to his throat and drew it across in a single slash. It was over. <br>
               I have never been happier to see Hawthorne. <br>
               Horowitz
             </p>
@@ -126,7 +125,7 @@
     <div class="popup-content">
       <div class="popup-text">
         <h2>Invading personal space!</h2>
-        <p>You just entered the diary page, here is the diary of my favorite character.</p>
+        <p>This is the character's page, here is the diary of my favorite character.</p>
         <p>"Write a diary for your favorite character".</p>
         <button class="popup-close-btn">Got it!</button>
       </div>
