--- a/riddles.html
+++ b/riddles.html
@@ -54,7 +54,7 @@
                 <br><input type="text" id="answer4" name="answer4" placeholder="WRITE ANSWER">
             </div>
             <div class="question">
-                <label for="answer5" class="riddles-paragraph-game">5. I am the person who endured the crime, in the book, Diana & Damian Cowper. <span id="span" class="hide">(VICTIM)</span></label>
+                <label for="answer5" class="riddles-paragraph-game">5. I am the person who endured the crime; in the book, Diana & Damian Cowper. <span id="span" class="hide">(VICTIM)</span></label>
                 <br><input type="text" id="answer5" name="answer5" placeholder="WRITE ANSWER">
             </div>
             <div class="question">
@@ -66,11 +66,11 @@
                 <br><input type="text" id="answer7" name="answer7" placeholder="WRITE ANSWER">
             </div>
             <div class="question">
-                <label for="answer8">8. I am a harmful threat that lurks in disguise, adjective to describe Cornwallis. <span id="span" class="hide">(PERNICIOUS)</span></label>
+                <label for="answer8">8. I am a feeling of envy or resentment, an adjective to describe Cornwallis. <span id="span" class="hide">(JEALOUS)</span></label>
                 <br><input type="text" id="answer8" name="answer8" placeholder="WRITE ANSWER">
             </div>
             <div class="question">
-                <label for="answer9" class="riddles-paragraph-game">9. I an adjective to describe actions kept in secret, I reflect the relationship between Alan Godwin and Mary <span id="span" class="hide">(WITNESS)</span></label>
+                <label for="answer9" class="riddles-paragraph-game">9. I am the observer of the crime, the one who sheds light on the truth. <span id="span" class="hide">(WITNESS)</span></label>
                 <br><input type="text" id="answer9" name="answer9" placeholder="WRITE ANSWER">
             </div>
             <div class="question">
