--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- 
+    Hello Miss White!
+    This is the main page of the website
+    Nothing really intersting here, just a few links to the other pages
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -75,7 +81,7 @@
         <p class="p-footer">
             <span class="title-footer"><strong> The Word Is Murder </strong></span> 
             <br />
-             <span id="cp-year"> © 2023 Copyright. All Rights
+             <span id="cp-year"> © 2023 Copyright Marc Anis Asmar. All Rights
             Reserved.</span>
         </p>
         <div class="small-icon">
