--- a/riddles.html
+++ b/riddles.html
@@ -1,3 +1,12 @@
+<!-- 
+    Hello Miss White!
+    This is the riddles page of the website
+    You can check out riddles.js too, it is how the website takes your answer and verify if it is correct or not
+    Code is a bit less messy and works!
+ -->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -95,7 +104,7 @@
                 <p class="p-footer">
                     <span class="title-footer"><strong> The Word Is Murder </strong></span> 
                     <br />
-                     <span id="cp-year"> © 2023 Copyright. All Rights
+                     <span id="cp-year"> © 2023 Copyright Marc Anis Asmar. All Rights
                     Reserved.</span>
                 </p>
                 <div class="small-icon">
