--- a/songs.html
+++ b/songs.html
@@ -1,3 +1,9 @@
+<!-- 
+    Hello Miss White!
+    This is the songs page, you can check out the code of the page in the file songs.html
+    The code is very messy, but it works!
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -109,7 +115,7 @@
                 <p class="p-footer">
                     <span class="title-footer"><strong> The Word Is Murder </strong></span> 
                     <br />
-                     <span id="cp-year"> © 2023 Copyright. All Rights
+                     <span id="cp-year"> © 2023 Copyright Marc Anis Asmar. All Rights
                     Reserved.</span>
                 </p>
                 <div class="small-icon">
