--- a/cover.html
+++ b/cover.html
@@ -1,3 +1,9 @@
+<!-- 
+    Hello Miss White1
+    This is the cover page
+    It is very basic to be honest. I just added a few images and a text explaining my choices
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
